--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -116,6 +116,7 @@ p.show-hide {
 p.message, p#instructions {
 	color: #fff;
 	font-size: 24px;
+	min-height: 28px;
 	margin-left: 15px;
 }
 p#instructions {
