--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -91,9 +91,9 @@ h1.site-title {
 .panel {
 	padding: 15px 15px 5px;
 	margin-bottom: 17px;
-	background: #222;
+	background: #111;
 	border-radius: 5px;
-	box-shadow: inset 0 0 6px rgba(0,0,0,0.8);
+	border: 1px solid #444;
 }
 p {
 	line-height: 1.2;
